update layout of the books page

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -10,6 +10,7 @@
 // Components
 // @import 'components/header';
 @import 'components/home_page';
+@import 'components/user_books_page';
 
 // Layouts
 @import 'layouts/container';
