--- a/app/views/user_books/index.html.erb
+++ b/app/views/user_books/index.html.erb
@@ -22,15 +22,14 @@
     <aside class="user-books-page__sidebar">
       <h2>Your Shelves</h2>
       <ul class="">
-        <li><input type="checkbox" /> Show all (104)</li>
-        <li><input type="checkbox" /> Currently reading (2)</li>
-        <li><input type="checkbox" /> Want to read (14)</li>
+        <li><input type="checkbox"> Show all (104)</li>
+        <li><input type="checkbox"> Currently reading (2)</li>
+        <li><input type="checkbox"> Want to read (14)</li>
       </ul>
       <button class="">Add new shelf</button>
     </aside>
     <!-- Main Book List Section -->
     <section class="user-books-page__book-list">
-
       <!-- Book Item 1 -->
       <div class="user-books-page__book-item">
         <%= image_tag "no_cover", class: "user-books-page__cover" %>
@@ -46,7 +45,6 @@
           <button class="">View Review</button>
         </div>
       </div>
-
       <!-- Book Item 2 -->
       <div class="user-books-page__book-item">
         <%= image_tag "no_cover", class: "" %>
@@ -64,5 +62,4 @@
       </div>
     </section>
   </div>
-
 </div>
