separate and improve styles of the user book card

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -11,6 +11,7 @@
 // @import 'components/header';
 @import 'components/home_page';
 @import 'components/user_books_page';
+@import 'components/user_book';
 
 // Layouts
 @import 'layouts/container';
