add basic version of the generic cta button

--- a/app/views/user_books/_user_book.html.erb
+++ b/app/views/user_books/_user_book.html.erb
@@ -46,7 +46,7 @@
     </div>
   </div>
   <div class="book-card__controls">
-    <button>Finished Reading</button>
-    <button>View Review</button>
+    <%= cta_button("Finished Reading", variant: :primary, leading_icon: "🔥") %>
+    <%= cta_button("View Review", variant: :secondary, trailing_icon: "➡️") %>
   </div>
 </div>
