--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -9,6 +9,7 @@
 
 // Components
 // @import 'components/header';
+@import 'components/button';
 @import 'components/home_page';
 @import 'components/user_books_page';
 @import 'components/user_book';
